--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ div {
 }
 
 img{
-  width: 90%;
+  width: 100%;
 }
 
 div .health, .journey, .coding, .career, .selfie, .travel, .hustle, .rescue, .peace {
@@ -184,8 +184,8 @@ height: 220px;
   img{
     margin: 20px;
   }
-  
-  .frame{
+
+  frame{
     height: 370px;
     overflow: hidden;
   }
