--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,6 @@ h2{
   text-align: center;
 }
 .content-wrapper{
-  width: 90%;
   display: flex;
   flex-flow: row wrap;
 }
@@ -124,10 +123,12 @@ div {
   flex-flow: row wrap;
   justify-content: center;
 }
-
+/*setting image too 100% width because images are all in frames*/
 img{
   width: 100%;
 }
+
+
 
 div .health, .journey, .coding, .career, .selfie, .travel, .hustle, .rescue, .peace {
 border: #8FBC8F 5px solid;
@@ -160,41 +161,6 @@ height: 220px;
 }
 
 
-/*=========================TABLET STYLES===================================*/
-@media (min-width: 768px){
-  div .health, .career, .selfie, .travel, .rescue {
-  background: rgba(47, 79, 79, 0.8);
-  }
-  div .journey{
-    height: 250px;
-  }
-  .coding h2{
-    width: 100%;
-  }
-  .coding ul li{
-    margin: 10px;
-  }
-  div .hustle{
-    align-items: center;
-    height: 250px;
-  }
-  .hustle h2{
-    margin: 20px;
-  }
-  img{
-    margin: 20px;
-  }
-
-  frame{
-    height: 370px;
-    overflow: hidden;
-  }
-}
-
-/*=========================DESKTOP STYLES===================================*/
-@media (min-with: 1200px){
-
-}
 
 
 
@@ -296,6 +262,49 @@ height: 220px;
   (min-resolution: 1.25dppx),
   (min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
+}
+/*=========================TABLET STYLES===================================*/
+@media (min-width: 768px){
+  div .health, .career, .selfie, .travel, .rescue {
+  background: rgba(47, 79, 79, 0.8);
+  }
+  div .journey{
+    height: 250px;
+  }
+  .coding h2{
+    width: 100%;
+  }
+  .coding ul li{
+    margin: 10px;
+  }
+  div .hustle{
+    align-items: center;
+    height: 250px;
+  }
+  .hustle h2{
+    margin: 20px;
+  }
+  img{
+    margin: 20px;
+  }
+
+  frame{
+    height: 370px;
+    overflow: hidden;
+  }
+}
+
+/*=========================DESKTOP STYLES===================================*/
+@media (min-width: 1200px){
+div .health, .journey, .coding, .career, .selfie, .travel, .hustle, .rescue, .peace{
+  flex-basis: 20%;
+}
+div .journey {
+  height: 389.11px;
+}
+div .hustle {
+  height: 389.11px;
+}
 }
 
 /* ==========================================================================
